--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cloud_firestore: ^4.17.0
   flutter_dotenv: ^5.1.0
   cupertino_icons: ^1.0.8
+  geolocator: ^11.0.0
   latlong2: ^0.8.1
 
 dev_dependencies:
