--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   geolocator: ^11.0.0
   latlong2: ^0.8.1
+  firebase_auth: ^4.17.5
+  pigeon: ^25.3.1
+  url_launcher: ^6.1.7
+  google_maps_flutter: ^2.5.0  # ✅ 위치 변경 (의존성이므로)
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
